add button and remove header option

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -62,7 +62,7 @@
         </div>
         <div class="col-md-4 your-pro">
           <div class="d-flex your-progress">
-            <div class="flying">
+            <!-- <div class="flying">
               <h5>Your Progress 
                 <svg-icon
                 [applyClass]="true"
@@ -76,11 +76,11 @@
                 class="tooltip-icon"
               ></svg-icon>
               </h6>
-            </div>
-            <div class="your-digit">{{user.compliance_percent}}<span class="percent">%</span></div>
+            </div> -->
+            <!-- <div class="your-digit">{{user.compliance_percent}}<span class="percent">%</span></div> -->
           </div>
         </div>
-        <div class="col-md-4 next-pro">
+        <!-- <div class="col-md-4 next-pro">
           <div class="next-task">
             <h5>next task</h5>
             <h6 *ngIf="nextTasks">{{nextTaskText}}</h6>
@@ -101,7 +101,7 @@
                 {{nextTaskTime}}</div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="complance-dashboard">
