--- a/src/app/dashboard/dashboard-tasks/dashboard-tasks.component.html
+++ b/src/app/dashboard/dashboard-tasks/dashboard-tasks.component.html
@@ -1,26 +1,112 @@
-  <div class="taskmain container-fluid">
+<div class="taskmain container-fluid">
   <div class="row task-container">
-      <div class="col-md-6 col-xs-6 col-sm-6 task-count no-background no-padding">
-        <div class="counter-left">
-          <h1 class="count"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i>{{policy.length+lms.length}}</h1>
-          <h4 class="title">Tasks</h4>
-          <p class="content">until compliance</p>
+    <div class="col-md-6 col-xs-6 col-sm-6 task-count no-background no-padding">
+      <div class="counter-left">
+        <h1 class="count">
+          <i class="fa fa-exclamation-triangle" aria-hidden="true"></i
+          >{{ policy.length + lms.length }}
+        </h1>
+        <h4 class="title">Tasks</h4>
+        <p class="content">until compliance</p>
+        <button>compliance</button>
+      </div>
+    </div>
+    <div class="col-md-6 col-xs-6 col-sm-6 task-count no-background no-padding">
+      <div class="counter-right">
+        <h1 class="count">
+          {{ mm.length + mm_lms.length
+          }}<i class="fa fa-location-arrow" aria-hidden="true"></i>
+        </h1>
+        <h4 class="title">Mastery moments</h4>
+        <p class="content">remaining today</p>
+        <button class=""><i class="fa fa-play" aria-hidden="true"></i> Train</button>
+      </div>
+    </div>
+  </div>
+  <div class="tasks" style="width: 100%; padding: 20px">
+    <!-- <h3 class="heading">Tasks</h3>
+          <p class="subheading">Complete {{policy.length+lms.length}} tasks to become compliant.</p> -->
+
+    <div
+      id="carouselindicators"
+      class="carousel slide pt-2 pb-2"
+      data-ride="carousel"
+      data-interval="3000"
+    >
+      <ol class="carousel-indicators">
+        <li data-target="#carouselindicators" data-slide-to="0" class=""></li>
+        <li
+          data-target="#carouselindicators"
+          data-slide-to="1"
+          class="active"
+        ></li>
+        <li data-target="#carouselindicators" data-slide-to="2" class=""></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active carousel-item-left">
+          <img
+            class="d-block w-100"
+            src="https://i.imgur.com/kjR96mD.jpg"
+            alt="First slide"
+          />
+          <!-- <div class="carousel-caption d-none d-md-block">
+            <h4>
+              <i class="fa fa-map-marker"></i>
+              Dharamshala,Himachal Pradesh, India
+            </h4>
+          </div> -->
+        </div>
+        <div class="carousel-item carousel-item-next carousel-item-left">
+          <img
+            class="d-block w-100"
+            src="https://i.imgur.com/l3iUv92.jpg"
+            alt="Second slide"
+          />
+          <!-- <div class="carousel-caption d-none d-md-block">
+            <h4>
+              <i class="fa fa-map-marker"></i>
+              Manali,Himachal Pradesh, India
+            </h4>
+          </div> -->
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="https://i.imgur.com/rHCSTM1.jpg"
+            alt="Third slide"
+          />
+          <!-- <div class="carousel-caption d-none d-md-block">
+            <h4>
+              <i class="fa fa-map-marker"></i>
+              Kerala,Kerala, India
+            </h4>
+          </div> -->
         </div>
       </div>
-      <div class="col-md-6 col-xs-6 col-sm-6 task-count no-background no-padding">
-        <div class="counter-right">
-          <h1 class="count">{{mm.length+mm_lms.length}}<i class="fa fa-location-arrow" aria-hidden="true"></i></h1>
-          <h4 class="title">Mastery moments</h4>
-          <p class="content">remaining today</p>
-        </div>
-      </div>
-      </div>
-      <div class="tasks" style="width: 100%;">
-          <h3 class="heading">Tasks</h3>
-          <p class="subheading">Complete {{policy.length+lms.length}} tasks to become compliant.</p>
+      <a
+        class="carousel-control-prev"
+        href="#carouselindicators"
+        role="button"
+        data-slide="prev"
+        data-abc="true"
+      >
+        <i class="fa fa-chevron-left"></i>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselindicators"
+        role="button"
+        data-slide="next"
+        data-abc="true"
+      >
+        <i class="fa fa-chevron-right"></i>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+   
 
-
-          <div class="task-notify" *ngFor="let task of policy" >
+    <!-- <div class="task-notify" *ngFor="let task of policy" >
             <div class="d-flex">
               <div class="notify-header-left">
                 <span class="sno">#1</span> {{task.topic_courses.topics.topic_name}}
@@ -41,8 +127,8 @@
               </div>
             </div>
             <h3 class="title">Complete the Formal Training course for your {{task.topic_courses.topics.topic_name}} topic.</h3>
-          </div>
-          <!--<div class="task-notify" *ngFor="let task of mm" >
+          </div> -->
+    <!--<div class="task-notify" *ngFor="let task of mm" >
             <div class="d-flex">
               <div class="notify-header-left">
                 <span class="sno">#1</span> {{task.topic_courses.topics.topic_name}}
@@ -86,35 +172,41 @@
             </div>
             <h3 class="title">Sign the Policy Document for the Data Security topic.</h3>
           </div> -->
-      </div>
-      <div class="tasks" style="width: 100%;" *ngIf="(mm.length+mm_lms.length)>0">
-        <h3 class="heading">Mastery Moments</h3>
-        <p class="subheading">Complete {{mm.length+mm_lms.length}} mastery moments to become compliant.</p>
-
-
-        <div class="task-notify" *ngFor="let task of mm" >
-          <div class="d-flex">
-            <div class="notify-header-left">
-              <span class="sno">#1</span> {{task.topic_courses.topics.topic_name}}
-            </div>
-            <div class="notify-header-right">
-              30 mins <i class="far fa-clock"></i>
-            </div>
-          </div>
-          <h3 class="title">Complete the Mastery Moment for your {{task.topic_courses.topics.topic_name}} topic.</h3>
-        </div>
-        <div class="task-notify" *ngFor="let task of mm_lms" >
-          <div class="d-flex">
-            <div class="notify-header-left">
-              <span class="sno">#1</span> {{task.topic_courses.topics.topic_name}}
-            </div>
-            <div class="notify-header-right">
-              30 mins <i class="far fa-clock"></i>
-            </div>
-          </div>
-          <h3 class="title">Complete the Mastery Moment for your {{task.topic_courses.topics.topic_name}} topic.</h3>
-        </div>
-    </div>
   </div>
-      
+  <!-- <div class="tasks" style="width: 100%" *ngIf="mm.length + mm_lms.length > 0">
+    <h3 class="heading">Mastery Moments</h3>
+    <p class="subheading">
+      Complete {{ mm.length + mm_lms.length }} mastery moments to become
+      compliant.
+    </p>
 
+    <div class="task-notify" *ngFor="let task of mm">
+      <div class="d-flex">
+        <div class="notify-header-left">
+          <span class="sno">#1</span> {{ task.topic_courses.topics.topic_name }}
+        </div>
+        <div class="notify-header-right">
+          30 mins <i class="far fa-clock"></i>
+        </div>
+      </div>
+      <h3 class="title">
+        Complete the Mastery Moment for your
+        {{ task.topic_courses.topics.topic_name }} topic.
+      </h3>
+    </div>
+    <div class="task-notify" *ngFor="let task of mm_lms">
+      <div class="d-flex">
+        <div class="notify-header-left">
+          <span class="sno">#1</span> {{ task.topic_courses.topics.topic_name }}
+        </div>
+        <div class="notify-header-right">
+          30 mins <i class="far fa-clock"></i>
+        </div>
+      </div>
+      <h3 class="title">
+        Complete the Mastery Moment for your
+        {{ task.topic_courses.topics.topic_name }} topic.
+      </h3>
+    </div>
+  </div> -->
+</div>
